[tool.poetry]
name = "python-logging"
version = "0.1.0"
description = ""
authors = ["ziveo <bziveo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

